--- a/src/pug/portfolio.pug
+++ b/src/pug/portfolio.pug
@@ -9,61 +9,70 @@ block content
     .container
       .portfolio__wrapper
         // portfolio item
-        .portfolio-item
-          a(href="#").portfolio-item__name.--hc-blue national broadcaster
+        .portfolio-item.wow
+          a(href="portfolio-project.html").portfolio-item__name.--hc-blue national broadcaster
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
           .portfolio-figure
-            .portfolio-figure-bg.--bg-blue
-            a(href="#").portfolio-figure__img-holder
+            .portfolio-figure-bg.--bg-blue(js-rellax data-rellax-speed='2')
+            a(href="portfolio-project.html").portfolio-figure__img-holder
               img(src='img/portfolio-project_1.png' srcset='img/portfolio-project_1@2x.png 2x')
 
         // portfolio item
-        .portfolio-item
-          a(href="#").portfolio-item__name.--hc-yellow fashion magazine
+        .portfolio-item.wow
+          a(href="portfolio-project.html").portfolio-item__name.--hc-yellow fashion magazine
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
           .portfolio-figure
-            .portfolio-figure-bg.--bg-yellow
-            a(href="#").portfolio-figure__img-holder
+            .portfolio-figure-bg.--bg-yellow(js-rellax data-rellax-speed='2')
+            a(href="portfolio-project.html").portfolio-figure__img-holder
               img(src='img/portfolio-project_2.png' srcset='img/portfolio-project_2@2x.png 2x')
 
         // portfolio item
-        .portfolio-item
-          a(href="#").portfolio-item__name.--hc-pink creative portfolio
+        .portfolio-item.wow
+          a(href="portfolio-project.html").portfolio-item__name.--hc-pink creative portfolio
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
           .portfolio-figure
-            .portfolio-figure-bg.--bg-pink
-            a(href="#").portfolio-figure__img-holder
+            .portfolio-figure-bg.--bg-pink(js-rellax data-rellax-speed='2')
+            a(href="portfolio-project.html").portfolio-figure__img-holder
               img(src='img/portfolio-project_3.png' srcset='img/portfolio-project_3@2x.png 2x')
 
         // portfolio item
-        .portfolio-item
-          a(href="#").portfolio-item__name.--hc-red RECORDING STUDIOS
+        .portfolio-item.wow
+          a(href="portfolio-project.html").portfolio-item__name.--hc-red RECORDING STUDIOS
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
           .portfolio-figure
-            .portfolio-figure-bg.--bg-red
-            a(href="#").portfolio-figure__img-holder
+            .portfolio-figure-bg.--bg-red(js-rellax data-rellax-speed='2')
+            a(href="portfolio-project.html").portfolio-figure__img-holder
               img(src='img/portfolio-project_4.png' srcset='img/portfolio-project_4@2x.png 2x')
 
         // portfolio item
-        .portfolio-item
-          a(href="#").portfolio-item__name.--hc-black luxury hotels
+        .portfolio-item.wow
+          a(href="portfolio-project.html").portfolio-item__name.--hc-black luxury hotels
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
           .portfolio-figure
-            .portfolio-figure-bg.--bg-black
-            a(href="#").portfolio-figure__img-holder
+            .portfolio-figure-bg.--bg-black(js-rellax data-rellax-speed='2')
+            a(href="portfolio-project.html").portfolio-figure__img-holder
               img(src='img/portfolio-project_5.png' srcset='img/portfolio-project_5@2x.png 2x')
 
         // portfolio item
-        .portfolio-item
-          a(href="#").portfolio-item__name.--hc-green art workshops
+        .portfolio-item.wow
+          a(href="portfolio-project.html").portfolio-item__name.--hc-green art workshops
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
           .portfolio-figure
-            .portfolio-figure-bg.--bg-green
-            a(href="#").portfolio-figure__img-holder
+            .portfolio-figure-bg.--bg-green(js-rellax data-rellax-speed='2')
+            a(href="portfolio-project.html").portfolio-figure__img-holder
               img(src='img/portfolio-project_6.png' srcset='img/portfolio-project_6@2x.png 2x')
+
+  // HOME LINES :: START
+  .home-lines
+    .home-lines__wrapper
+      picture
+        source(media="(max-width: 992px)" srcset="img/heroLinesBg.png 1x, img/heroLinesBg@2x.png 2x")
+        source(media="(min-width: 992px)" srcset="img/heroLinesBgDesktop.png 1x, img/heroLinesBgDesktop@2x.png 2x")
+        img.home-lines__bg(src="img/heroLinesBg.png")
+                        
